<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_find_doctor"
            android:icon="@drawable/ic_menu_find_doctor"
            android:title="@string/menu_find_a_doctor" />
        <item
            android:id="@+id/nav_schedule_appointment"
            android:icon="@drawable/ic_menu_schedule_appointment"
            android:title="@string/menu_schedule_appointment" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_about"
            android:title="@string/menu_about" />
    </group>
</menu>