<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.app.profile.ui.main.view.fragment.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_find_doctor"
        android:name="com.app.profile.ui.main.view.fragment.FindDoctorFragment"
        android:label="@string/menu_find_a_doctor"
        tools:layout="@layout/fragment_find_doctor" />

    <fragment
        android:id="@+id/nav_schedule_appointment"
        android:name="com.app.profile.ui.main.view.fragment.ScheduleAppointmentFragment"
        android:label="@string/menu_schedule_appointment"
        tools:layout="@layout/fragment_schedule_appointment" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.app.profile.ui.main.view.fragment.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />
</navigation>